# haskell-workshop

./: AllTests.hs  CheatSheet.hs  Common.hs  CreditCardNumberValidator.hs  E01_GettingStarted.hs  E06_CreditCardNumberValidator.hs  E07_PatternMatching.hs  E10_QuickCheckExamples.hs  Functions.hs  GettingStarted.hs  HigherOrderFunctions.hs  PartialApplication.hs  ProjectEuler.hs  README.md  Recursion.hs  RecursionSchemes.hs  Vigenere.hs  hands-on-haskell.cabal
Exercises/: AllTests.hs  CheatSheet.hs  CreditCardNumberValidator.hs  E02_Functions.hs  E03_PartialApplication.hs  E04_Recursion.hs  E05_RecursionSchemes.hs  E06_CreditCardNumberValidator.hs  E07_PatternMatching.hs  E08_HigherOrderFunctions.hs  E09_ProjectEuler.hs  E11_Vigenere.hs  Functions.hs  GettingStarted.hs  PartialApplication.hs  PatternMatching.hs  ProjectEuler.hs  QuickCheckExamples.hs  Recursion.hs  RecursionSchemes.hs  Vigenere.hs
Exercises/Tests/: CreditCardNumberValidatorTests.hs  FunctionsTests.hs  GettingStartedTests.hs  PartialApplicationTests.hs  QuickCheckExamplesTests.hs  RecursionSchemesTests.hs  VigenereTests.hs
Tests/: CreditCardNumberValidatorTests.hs  FunctionsTests.hs  HigherOrderFunctionsTests.hs  PartialApplicationTests.hs  PatternMatchingTests.hs  ProjectEulerTests.hs  QuickCheckExamplesTests.hs  RecursionSchemesTests.hs  RecursionTests.hs  VigenereTests.hs
