name:                haskell-workshop
version:             2.0.0.0
author:              Tobias G. Waaler, Erlend Hamberg, Runar Furenes
maintainer:          tobiasgwaaler@gmail.com
category:            Educational
build-type:          Simple

extra-source-files:  README.md
cabal-version:    >= 1.10


executable all
  main-is:             AllTests.hs

  build-depends:       base >= 4.6 && < 4.8,
                       QuickCheck,
                       hspec

  hs-source-dirs:      Exercises

  default-language:    Haskell2010
